--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -92,15 +92,31 @@ body {
 	}
 }
 
-#bottom-container {
+#bottomContainer {
 	font-size: 20px;
 	color: white;
 	@include text-shadow(rgb(0,0,0) 1px 1px 0);
-	position: relative;
+	position: absolute;
 	bottom: 0;
 	left: 0;
 	width: 100%;
 	height: 40px;
+    border-top: 1px solid white;
+    z-index: 100;
+    background-color: rgba(0,0,0,0.5);
+    @include translateY(40px);
+    @include transition(0.25s);
+    &.visible {
+    	@include translateY(0);
+    }
+
+	#score {
+		position: absolute;
+		width: 50%;
+		left: 50%;
+		padding: 10px;
+		text-align: right;
+	}
 }
 
 #levelContainer {
@@ -142,17 +158,54 @@ body {
 			@include text-shadow(rgb(0,0,0) 1px 1px 0);
 
 		}
+		&.multipleChoice {
+			.alternative {
+				&:before, &:after {
+					@include border-radius(4px);
+				}
+			}
+		}
 		.alternative {
 			padding: 10px;
-			border: 1px solid #FF0000;
+			padding-left: 65px;
 			margin: 15px 0 15px 0;
 			color: white;
 			font-size: 20px;
-			text-align: center;
+			text-align: left;
 			letter-spacing: 1;
-			background-color: #BB6A26;
+			background-color: transparent;
 			@include text-shadow(rgb(0,0,0) 1px 1px 0);
 			@include transition(0.1s);
+			position: relative;
+			&.faded {
+				opacity: 0.6;
+			}
+			&:before {
+				position: absolute;
+			    width: 40px;
+			    height: 40px;
+			    border: 1px solid white;
+			    left: 0;
+			    top: 0;
+			    content: "";
+			    border-radius: 50%;
+			    z-index: 2;
+			    @include transition(0.25s);
+			}
+			&:after {
+			    position: absolute;
+			    opacity: 0;
+			    width: 20px;
+			    height: 20px;
+			    border: 1px solid white;
+			    background-color: white;
+			    left: 10px;
+			    top: 10px;
+			    content: "";
+			    border-radius: 50%;
+			    z-index: 1;
+			    @include transition(0.25s);
+			}
 			&.correct-answer {
 				background-color: #4cc124;
 			}
@@ -160,7 +213,14 @@ body {
 				background-color: #FF0000;
 			}
 			&.selected {
-				background-color: #F4A460;
+				&:before {
+					border: 1px solid black;
+					@include transform(scale(-0.5));
+				}
+				&:after {
+					opacity: 1;
+					@include transform(scale(2));
+				}
 			}
 		}
 	}
