--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -170,18 +170,44 @@ body {
 }
 
 /* line 95, ../sass/screen.scss */
-#bottom-container {
+#bottomContainer {
   font-size: 20px;
   color: white;
   text-shadow: black 1px 1px 0;
-  position: relative;
+  position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
   height: 40px;
+  border-top: 1px solid white;
+  z-index: 100;
+  background-color: rgba(0, 0, 0, 0.5);
+  -moz-transform: translateY(40px);
+  -ms-transform: translateY(40px);
+  -webkit-transform: translateY(40px);
+  transform: translateY(40px);
+  -moz-transition: 0.25s;
+  -o-transition: 0.25s;
+  -webkit-transition: 0.25s;
+  transition: 0.25s;
+}
+/* line 109, ../sass/screen.scss */
+#bottomContainer.visible {
+  -moz-transform: translateY(0);
+  -ms-transform: translateY(0);
+  -webkit-transform: translateY(0);
+  transform: translateY(0);
+}
+/* line 113, ../sass/screen.scss */
+#bottomContainer #score {
+  position: absolute;
+  width: 50%;
+  left: 50%;
+  padding: 10px;
+  text-align: right;
 }
 
-/* line 106, ../sass/screen.scss */
+/* line 122, ../sass/screen.scss */
 #levelContainer {
   width: 100%;
   height: 100%;
@@ -195,7 +221,7 @@ body {
   -webkit-perspective: 3000;
   perspective: 3000;
 }
-/* line 116, ../sass/screen.scss */
+/* line 132, ../sass/screen.scss */
 #levelContainer .level-timer {
   position: absolute;
   width: 100%;
@@ -204,7 +230,7 @@ body {
   top: 0;
   height: 10px;
 }
-/* line 125, ../sass/screen.scss */
+/* line 141, ../sass/screen.scss */
 #levelContainer .answerbutton {
   text-align: center;
   margin-top: 20px;
@@ -212,14 +238,14 @@ body {
   padding: 10px;
   font-size: 29px;
 }
-/* line 132, ../sass/screen.scss */
+/* line 148, ../sass/screen.scss */
 #levelContainer .questionContainer {
   color: white;
   position: absolute;
   width: 100%;
   padding: 30px 20px 20px 20px;
 }
-/* line 137, ../sass/screen.scss */
+/* line 153, ../sass/screen.scss */
 #levelContainer .questionContainer .question {
   color: white;
   text-transform: uppercase;
@@ -227,31 +253,88 @@ body {
   text-align: center;
   text-shadow: black 1px 1px 0;
 }
-/* line 145, ../sass/screen.scss */
+/* line 163, ../sass/screen.scss */
+#levelContainer .questionContainer.multipleChoice .alternative:before, #levelContainer .questionContainer.multipleChoice .alternative:after {
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+}
+/* line 168, ../sass/screen.scss */
 #levelContainer .questionContainer .alternative {
   padding: 10px;
-  border: 1px solid #FF0000;
+  padding-left: 65px;
   margin: 15px 0 15px 0;
   color: white;
   font-size: 20px;
-  text-align: center;
+  text-align: left;
   letter-spacing: 1;
-  background-color: #BB6A26;
+  background-color: transparent;
   text-shadow: black 1px 1px 0;
   -moz-transition: 0.1s;
   -o-transition: 0.1s;
   -webkit-transition: 0.1s;
   transition: 0.1s;
+  position: relative;
 }
-/* line 156, ../sass/screen.scss */
+/* line 180, ../sass/screen.scss */
+#levelContainer .questionContainer .alternative.faded {
+  opacity: 0.6;
+}
+/* line 183, ../sass/screen.scss */
+#levelContainer .questionContainer .alternative:before {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  border: 1px solid white;
+  left: 0;
+  top: 0;
+  content: "";
+  border-radius: 50%;
+  z-index: 2;
+  -moz-transition: 0.25s;
+  -o-transition: 0.25s;
+  -webkit-transition: 0.25s;
+  transition: 0.25s;
+}
+/* line 195, ../sass/screen.scss */
+#levelContainer .questionContainer .alternative:after {
+  position: absolute;
+  opacity: 0;
+  width: 20px;
+  height: 20px;
+  border: 1px solid white;
+  background-color: white;
+  left: 10px;
+  top: 10px;
+  content: "";
+  border-radius: 50%;
+  z-index: 1;
+  -moz-transition: 0.25s;
+  -o-transition: 0.25s;
+  -webkit-transition: 0.25s;
+  transition: 0.25s;
+}
+/* line 209, ../sass/screen.scss */
 #levelContainer .questionContainer .alternative.correct-answer {
   background-color: #4cc124;
 }
-/* line 159, ../sass/screen.scss */
+/* line 212, ../sass/screen.scss */
 #levelContainer .questionContainer .alternative.wrong-answer {
   background-color: #FF0000;
 }
-/* line 162, ../sass/screen.scss */
-#levelContainer .questionContainer .alternative.selected {
-  background-color: #F4A460;
+/* line 216, ../sass/screen.scss */
+#levelContainer .questionContainer .alternative.selected:before {
+  border: 1px solid black;
+  -moz-transform: scale(-0.5);
+  -ms-transform: scale(-0.5);
+  -webkit-transform: scale(-0.5);
+  transform: scale(-0.5);
+}
+/* line 220, ../sass/screen.scss */
+#levelContainer .questionContainer .alternative.selected:after {
+  opacity: 1;
+  -moz-transform: scale(2);
+  -ms-transform: scale(2);
+  -webkit-transform: scale(2);
+  transform: scale(2);
 }
